# ScreenpPro

./: .gitkeep  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  api.ts  componentRegistry.ts  main.tsx  runtimeComponents.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
