[package]
name = "screenpro"
version = "0.1.1"
description = "ScreenPro - customizable desktop screen saver"
authors = ["ScreenPro"]
edition = "2021"

[lib]
name = "screenpro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5.3"
rand = "0.10.2"
uuid = { version = "1.24.0", features = ["v4"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tauri-plugin-updater = "2.10.1"
